--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </table>
     <hr>
     <center>
-    <p style="font-size: large; font-style: oblique;">
+    <p style="font-size: large;">
         <a href="register.html"> Register for a Course | </a> <a href="https://www.instagram.com/_.hatetosocialize._/"> Instagram |</a> <a href="https://www.youtube.com/channel/UCVCL8sfPSl4Z_hNA_rA0I3w"> YouTube </a>
     </p>
     </center>
