--- a/register.html
+++ b/register.html
@@ -53,7 +53,7 @@
             </table>
         </form>
         <hr>
-            <p style="font-size: large; font-style: oblique;">
+            <p style="font-size: large;">
                 <a href="index.html"> Home | </a> <a href="https://www.instagram.com/_.hatetosocialize._/"> Instagram |</a> <a href="https://www.youtube.com/channel/UCVCL8sfPSl4Z_hNA_rA0I3w"> YouTube </a>
             </p>
     </center>
